[package]
name = "ytcast-lite"
version = "0.1.0"
edition = "2021"
description = "Lightweight YouTube Music Cast to MPD bridge"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros", "signal", "sync"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "json", "http1"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
socket2 = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"], default-features = false }
rand = "0.8"
httpdate = "1"
tokio-stream = "0.1"
futures-util = "0.3"
dirs = "6"

[features]
mock-mpd = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
